--- a/portfolio002.css
+++ b/portfolio002.css
@@ -30,6 +30,11 @@ header {
     cursor: pointer;
     
 }
+@media (min-width: 980px) {
+    #contact-bttn {
+        display: none;
+    }
+}
 #menu-large{
     font-size: x-large;
     background-color: transparent;
